--- a/client/src/component/DetecByCam/DetectByCam.css
+++ b/client/src/component/DetecByCam/DetectByCam.css
@@ -18,5 +18,5 @@
   height: 100vh;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
