--- a/client/src/App.css
+++ b/client/src/App.css
@@ -34,6 +34,12 @@
   border-radius: 4px;
 }
 
+.container-n {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 ul {
   list-style: none;
   padding: 0;
